	`na.action' argument that controls how missing values in
	`newdata' are handled (and defaults to predicting NA).
	[Previously the value of getOption("na.action") was used and
	this by default omitted cases with missing values, even if set
	to `na.exclude'.]

    o   xy.coords() coerces "POSIXt" objects to "POSIXct", allowing
	lines etc to added to plot.POSIXlt() plots.

    o   plot.mts() has a new argument `nc' controlling the number of
	columns (with default the old behaviour).

    o	capture.output() takes arbitrary connections for `file' argument.

    o	Package tcltk is now in a namespace.  To remove it you will
	now need to use unloadNamespace("tcltk").

    o	Using UseMethod() with more than two arguments now gives a 
	warning (as R-lang.texi has long claimed it did).

    o	Standalone Rmath now has a get_seed function as requested (PR#3160). 

    o	? and help() will accept more un-quoted arguments, e.g. NULL. 

    o	When coercion of a list fails, a meaningful error message is given.

    o	Subscripting data-frames with a single argument now ignores any
	`drop' argument (with a warning).  Previously using `drop'
	inhibited list-like subscripting.

    o	Setting dimnames to a factor now coerces to character, as S
	does.  (Earlier versions of R used the internal codes.)

    o	cut.POSIXt() now allows `breaks' to be more general intervals
	as allowed for the `by' argument to seq.POSIXt().

    o	*, - and / work more generally on difftime objects, which now
	have a diff() method.


DEPRECATED & DEFUNCT

    o	The assignment operator `_' has been removed.

    o	printNoClass() is defunct.

    o	The classic MacOS port is no longer supported, and its files
	have been removed from the sources.

    o	The deprecated argument 'white' of parse() has been removed.

    o	pacf/plot.mts() have been removed and their functionality
	incorporated into pacf.default/plot.ts().

    o	print.coefmat() is deprecated in favour of printCoefmat()